<resources>
    <string name="app_name">theMovieDB</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">The MovieDB</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="fragment_profile">Profile</string>
    <string name="action_log_out">Exit</string>


    <string name="fragment_detail">Detail</string>
    <string name="menu_home">Home</string>
    <string name="fragment_login">Login</string>
    <string name="fragment_register">Registration</string>
    <string name="menu_new_films">New films</string>
    <string name="menu_all_films">All films</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>