<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.themoviedb.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_detailFragment"
            app:destination="@id/nav_detailFragment" />
        <action
            android:id="@+id/action_nav_home_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.themoviedb.ui.login.LoginFragment"
        android:label="@string/fragment_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_nav_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/nav_registerFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_registerFragment"
        android:name="com.example.themoviedb.ui.register.RegisterFragment"
        android:label="@string/fragment_register"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_nav_registerFragment_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/nav_detailFragment"
        android:name="com.example.themoviedb.ui.detail.DetailFragment"
        android:label="@string/fragment_detail"
        tools:layout="@layout/fragment_detail" />
    <fragment
        android:id="@+id/nav_profileFragment"
        android:name="com.example.themoviedb.ui.home.ProfileFragment"
        android:label="@string/fragment_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>